<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></CalendarView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calendarView"
            android:hint="@string/event_name"
            android:textAlignment="center"
            android:id="@+id/editText"></EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lineari"
            android:layout_below="@+id/editText">

            <Button
                android:id="@+id/btnsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1"></Button>
            <Button
                android:id="@+id/btnupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_weight="1"></Button>
            <Button
                android:id="@+id/btndelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_weight="1"></Button>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>