<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:id="@+id/MainActivity2">


    <TextView
        android:id="@+id/bookAp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="@string/book"
        android:background="@color/main2"></TextView>
    <FrameLayout
        android:layout_width="411dp"
        android:layout_height="312dp"
        app:layout_constraintTop_toBottomOf="@+id/bookAp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/frameLayout"></FrameLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="6dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="#E6E3DF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/Select_area"
        android:textColorHint="#656562"
        android:drawableRight="@drawable/location"
        android:id="@+id/et_SA"
        android:inputType="text"
        android:imeOptions="actionNext"></EditText>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="6dp"
        android:padding="10dp"
        android:background="#E6E3DF"
        app:layout_constraintTop_toBottomOf="@+id/et_SA"
        android:hint="@string/search"
        android:completionHint="@string/search"
        android:completionThreshold="1"
        android:textColorHint="#656562"
        android:drawableRight="@drawable/search"
        android:id="@+id/et_SI"
        android:inputType="text"
        android:imeOptions="actionNext"></AutoCompleteTextView>
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="6dp"
        android:padding="10dp"
        android:background="#E6E3DF"
        app:layout_constraintTop_toBottomOf="@+id/et_SI"
        android:hint="@string/categories"
        android:completionHint="@string/categories"
        android:completionThreshold="1"
        android:textColorHint="#656562"
        android:drawableRight="@drawable/search"
        android:id="@+id/et_S"
        android:inputType="text"
        android:imeOptions="actionNext"></AutoCompleteTextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="6dp"
        android:padding="10dp"
        android:background="#E6E3DF"
        app:layout_constraintTop_toBottomOf="@+id/et_S"
        android:hint="@string/date"
        android:textColorHint="#656562"
        android:drawableRight="@drawable/calendar"
        android:id="@+id/et_D"
        android:inputType="text"
        android:imeOptions="actionDone"></EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_D"
        android:text="@string/searcher"
        android:textSize="18sp"
        android:background="#DC3870"
        android:textStyle="bold"
        android:layout_margin="6dp"
        android:padding="10dp"
        android:id="@+id/btn_search"
        android:onClick="startAsyncTask"></androidx.appcompat.widget.AppCompatButton>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#F1EDE6"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/rating"
            android:textSize="22sp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/rate"></TextView>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rate"
            android:layout_centerHorizontal="true"
            android:padding="3dp"
            android:background="@drawable/border"
            android:id="@+id/ratingBar"></RatingBar>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>