<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/header_bg"
        android:layout_marginTop="-140dp">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_view"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:textStyle="bold"></TextView>
        <View
            android:layout_width="140dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@color/black"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:background="#FCFFFF">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="bold"
                android:textSize="24dp"
                android:paddingLeft="16dp"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:padding="15dp"
                android:background="#EAF1F0"
                android:hint="John Smtih"
                android:id="@+id/et_fullname"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textStyle="bold"
                android:textSize="24dp"
                android:paddingLeft="16dp"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:padding="15dp"
                android:background="#EAF1F0"
                android:hint="e.g 55555555"
                android:id="@+id/et_mobilenumber"
                android:imeOptions="actionNext"
                android:inputType="number"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:textSize="24dp"
                android:paddingLeft="16dp"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:padding="15dp"
                android:background="#EAF1F0"
                android:hint="example@example.com"
                android:id="@+id/et_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textSize="24dp"
                android:paddingLeft="16dp"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:padding="15dp"
                android:background="#EAF1F0"
                android:hint="********"
                android:id="@+id/et_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"></EditText>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#3549C1"
            android:background="@drawable/signin_up"
            android:text="@string/create_acc"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:id="@+id/btnCreate"></androidx.appcompat.widget.AppCompatButton>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_acc"
            android:textStyle="bold"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:background="#F5F8F8"
            android:layout_marginTop="-25dp"
            android:id="@+id/tv_sign1"></TextView>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#3549C1"
            android:background="@drawable/signin_up"
            android:text="@string/login"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:id="@+id/btnlogin"></androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-140dp">
        <View

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bottom_bg"/>
    </LinearLayout>
</RelativeLayout>