<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF"
    android:id="@+id/background1">

    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/header_bg"
        android:layout_marginTop="-140dp">
    </View>
    <TextView
        android:id="@+id/title"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/tv_welcome"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="400dp"
        android:id="@+id/main_logo"
        android:layout_height="250dp"
        android:src="@drawable/main_logo"
        android:layout_centerInParent="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="100dp"></ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/main_logo"
        android:layout_marginTop="-10dp"
        android:id="@+id/linear1">
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/signin_up"
        android:backgroundTint="#3549C1"
        android:textColor="@color/colorWhite"
        android:text="@string/signin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/btn_signin"
        ></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="-20dp"
            android:background="@drawable/signin_up"
            android:backgroundTint="#494F73"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:id="@+id/btn_signup"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="-20dp"
            android:background="@drawable/signin_up"
            android:backgroundTint="#494F73"
            android:text="@string/mainPlaces"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/mainPlaces"/>
    </LinearLayout>

    <RelativeLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-120dp"
        android:layout_below="@+id/linear1">
        <View

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bottom_bg"/>
    </RelativeLayout>

</RelativeLayout>